--- a/weekly/index.html
+++ b/weekly/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Shanshan's Coursepage</title>
+<title>Charity's Coursepage</title>
 </head>
 
 <body>
