--- a/weekly/p1/index.html
+++ b/weekly/p1/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Shanshan's Coursepage</title>
+<title>Charity's Coursepage</title>
 </head>
 
 <body>
 <div id="wrapper">
 <h1>AVT 217 004 Introduction to Web Design</h1>
-<h2>Your name </h2>
-<h3>Semester and year</h3>
+<h2>Charity Richards </h2>
+<h3>Fall 2019</h3>
 
 <div class="weekly">
 <h4>Weekly Exercises</h4>
