--- a/weekly/p1/index.html
+++ b/weekly/p1/index.html
@@ -45,8 +45,13 @@
 <h4>Projects</h4>
 <dl>
 <dt>Project 1: Webpage Composition</dt>
-	<dd><a href="#">the “About” webpage for mobile</a></dd>
+<dd><a href="#">the “About” webpage for mobile</a></dd>
 <dd>the “About” webpage for desktop </dd>
+	<h1>Final Design</h1>
+<img src="img/project1finaldesktop.png" alt="project 1 final design desktop">
+<img src="img/project1finalmobile.png" alt="project 1 final design mobile">
+<img src="img/project1finaldesktop2.png" alt="project 1 final design desktop 2">
+<img src="img/project1finalmobile2.png" alt="project 1 final design mobile 2">
 </dl>
 
 <dl>
