--- a/p1/index.html
+++ b/p1/index.html
@@ -45,12 +45,10 @@
 <h4>Projects</h4>
 <dl>
 <dt>Project 1: Webpage Composition</dt>
-<dd><a href="#">the “About” webpage for mobile
-<img src="img/project1finalmobile.png" alt="project 1 final design mobile">
-<img src="img/project1finalmobile2.png" alt="project 1 final design mobile 2"></a></dd>
-<dd>the “About” webpage for desktop </dd>
-<img src="img/project1finaldesktop.png" alt="project 1 final design desktop">
-<img src="img/project1finaldesktop2.png" alt="project 1 final design desktop 2">
+<dd><a href="https://cricha160.github.io/AVT-217/p1/img/project1finalmobile.png">the “About” webpage for mobile</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/p1/img/project1finaldesktop.png">the “About” webpage for desktop</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/p1/img/project1finalmobile2.png">Mobile Design 2</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/p1/img/project1finaldesktop2.png">Desktop Design 2</a></dd>
 </dl>
 
 <dl>
