--- a/weekly/index.html
+++ b/weekly/index.html
@@ -45,8 +45,10 @@
 <h4>Projects</h4>
 <dl>
 <dt>Project 1: Webpage Composition</dt>
-	<dd><a href="#">the “About” webpage for mobile</a></dd>
-<dd>the “About” webpage for desktop </dd>
+<dd><a href="https://cricha160.github.io/AVT-217/p1/img/project1finalmobile.png">the “About” webpage for mobile</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/p1/img/project1finaldesktop.png">the “About” webpage for desktop</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/p1/img/project1finalmobile2.png">Mobile Design 2</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/p1/img/project1finaldesktop2.png">Desktop Design 2</a></dd>
 </dl>
 
 <dl>
