--- a/weekly/index.html
+++ b/weekly/index.html
@@ -15,21 +15,21 @@
 <h4>Weekly Exercises</h4>
 <dl>
 <dt>Week 1</dt>
-<dd>First image </dd>
-<dd>Chapter 2 Exercise 2-1</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w1/albino_raccoon.jpeg">First image</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w1/ch2ex.html">Chapter 2 Exercise 2-1</a></dd>
 </dl>
 
 <dl>
 <dt>Week 2</dt>
-<dd>Chapter 4 Exercises</dd>
-<dd>Assignment 1 Website Critique</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w2/ch4ex.html">Chapter 4 Exercises</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w2/exercise3.html">Assignment 1 Website Critique</a></dd>
 <dd>Student course homepage </dd>
 </dl>
 
 <dl>
 <dt>Week 3</dt>
-<dd>Chapter 24 exercise 24-1 (a html file with 2 images)</dd>
-<dd>Chapter 24 exercise 24-2 (a html file with 3 images and background color)</dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w3/ch24-1ex.html">Chapter 24 exercise 24-1 (a html file with 2 images)</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w3/ch24-2ex.html">Chapter 24 exercise 24-2 (a html file with 3 images and background color)</a></dd>
 <dd>Webpage structure 1: div box </dd>
 </dl>
 
@@ -53,7 +53,7 @@
 
 <dl>
 <dt>Project 2: Web Page Design and Development</dt>
-<dd>5 Well Designed Restaurant Sites Critique</dd>
+<dd><a href="https://cricha160.github.io/AVT-217/w3/critique.html">5 Well Designed Restaurant Sites Critique</a></dd>
 <dd>Sketches</dd>
 <dd>Photoshop Mockup #1 (including home and Menu)</dd>
 <dd>Photoshop Mockup #2 (including home and Menu)</dd>
