--- a/weekly/w6/ch6exindex.html
+++ b/weekly/w6/ch6exindex.html
@@ -25,7 +25,7 @@ small {
 </head>
 
 <body>
-<img src="Exercise 6-1 to 6-7/jenskitchen/images/jenskitchen.gif" alt="Jen's Kitchen banner" width="660" height="94">
+<img src="jenskitchen.gif" alt="Jen's Kitchen banner" width="660" height="94">
 
 <h1>Welcome to Jen&rsquo;s Kitchen</h1>
 
