--- a/weekly/w3/ch24-1ex.html
+++ b/weekly/w3/ch24-1ex.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<h1><img src="asian_cusine.png" alt="asian_cusine"></h1>
-	<h2><img src="boat_pic.png" alt="boat_pic"></h2>
+	<img src="img/asian_cusine.png" alt="asian_cusine"></h1>
+	<img src="img/boat_pic.png" alt="boat_pic"></h2>
 </body>
 </html>
