--- a/weekly/w3/ch24-2ex.html
+++ b/weekly/w3/ch24-2ex.html
@@ -7,9 +7,9 @@
 
 <body>
 	<body bgcolor="#E90E12"
-	<img src="greencircleblur.gif" alt="green blur circle">
-	<img src="greencircleblur.gif" alt="green circle blur">
-	<img src="circle24blur.png" alt="circle 24 blur"></body>
+	<img src="img/greencircleblur.gif" alt="green blur circle">
+	<img src="img/greencircleblur.gif" alt="green circle blur">
+	<img src="img/circle24blur.png" alt="circle 24 blur"></body>
 	
 </body>
 </html>
