--- a/weekly/index.html
+++ b/weekly/index.html
@@ -53,7 +53,7 @@
 
 <dl>
 <dt>Project 2: Web Page Design and Development</dt>
-<dd><a href="https://cricha160.github.io/AVT-217/w3/critique.html">5 Well Designed Restaurant Sites Critique</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w3/critique.html">5 Well Designed Restaurant Sites Critique</a></dd>
 <dd>Sketches</dd>
 <dd>Photoshop Mockup #1 (including home and Menu)</dd>
 <dd>Photoshop Mockup #2 (including home and Menu)</dd>
