--- a/weekly/index.html
+++ b/weekly/index.html
@@ -35,8 +35,8 @@
 
 	<dl>
 <dt>Week 4</dt>
-<dd></dd>
-<dd></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w4/div-2.html">Webpage Structure 2: Div Box></a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w3/critique.html">5 Restaurant Website Critiques></a></dd>
 <dd></dd>
 </dl>
 
