--- a/weekly/w5/headerex.html
+++ b/weekly/w5/headerex.html
@@ -12,7 +12,7 @@
 <div class="header">
 	<header>
 		<div id="logo">
-			<img src="logo.jpg" style="width:160px;height:89px;">
+			<img src="img/logo.jpg" style="width:160px;height:89px;">
 		
 		
 		</div>
