--- a/weekly/index.html
+++ b/weekly/index.html
@@ -35,8 +35,8 @@
 
 	<dl>
 <dt>Week 4</dt>
-<dd><a href="https://cricha160.github.io/AVT-217/weekly/w4/div-2.html">Webpage Structure 2: Div Box></a></dd>
-<dd><a href="https://cricha160.github.io/AVT-217/weekly/w3/critique.html">5 Restaurant Website Critiques></a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w4/div-2.html">Webpage Structure 2: Div Box</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w3/critique.html">5 Restaurant Website Critiques</a></dd>
 <dd></dd>
 </dl>
 
@@ -54,7 +54,10 @@
 <dl>
 <dt>Project 2: Web Page Design and Development</dt>
 <dd><a href="https://cricha160.github.io/AVT-217/weekly/w3/critique.html">5 Well Designed Restaurant Sites Critique</a></dd>
-<dd>Sketches</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p2/sketches/1.jpg">Sketch 1</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p2/sketches/2.jpg">Sketch 2</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p2/sketches/3.jpg">Sketch 3</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p2/sketches/4.jpg">Sketch 4</a></dd>
 <dd>Photoshop Mockup #1 (including home and Menu)</dd>
 <dd>Photoshop Mockup #2 (including home and Menu)</dd>
 <dd>Homepage HTML</dd>
