--- a/weekly/index.html
+++ b/weekly/index.html
@@ -58,7 +58,8 @@
 	<dd><a href="https://cricha160.github.io/AVT-217/p2/sketches/2.jpg">Sketch 2</a></dd>
 	<dd><a href="https://cricha160.github.io/AVT-217/p2/sketches/3.jpg">Sketch 3</a></dd>
 	<dd><a href="https://cricha160.github.io/AVT-217/p2/sketches/4.jpg">Sketch 4</a></dd>
-<dd>Photoshop Mockup #1 (including home and Menu)</dd>
+<dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup1.png">Home Page Mockup #1</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup2.png">Menu Mockup #1</a></dd>
 <dd>Photoshop Mockup #2 (including home and Menu)</dd>
 <dd>Homepage HTML</dd>
 <dd>Menu page HTML</dd>
