--- a/weekly/index.html
+++ b/weekly/index.html
@@ -60,7 +60,8 @@
 	<dd><a href="https://cricha160.github.io/AVT-217/p2/sketches/4.jpg">Sketch 4</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup1.png">Home Page Mockup #1</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup2.png">Menu Mockup #1</a></dd>
-<dd>Photoshop Mockup #2 (including home and Menu)</dd>
+<dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup3.png">Home Page Mockup #2</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup4.png">Menu Mockup #2</a></dd>
 <dd>Homepage HTML</dd>
 <dd>Menu page HTML</dd>
 	
