--- a/weekly/w6/ch6ex.html
+++ b/weekly/w6/ch6ex.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<img src="img/jenskitchen.gif" alt="Jen's Kitchen">
 <title>About Jen's Kitchen</title>
 <style>
 body {
