--- a/weekly/index.html
+++ b/weekly/index.html
@@ -40,6 +40,14 @@
 <dd></dd>
 </dl>
 
+	
+<dl>
+<dt>Week 5</dt>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w5/headerex.html">Header Exercise</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w6/ch6ex.html">Chapter 6-1 and 7 exercises</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w6/ch6index.html">Chapter 6-8 exercise</a></dd>
+</dl>
+
 </div><!-- weekly ends-->
 <div id="project">
 <h4>Projects</h4>
