--- a/weekly/index.html
+++ b/weekly/index.html
@@ -47,6 +47,13 @@
 	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w6/ch6ex.html">Chapter 6-1 and 7 exercises</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/weekly/w6/ch6index.html">Chapter 6-8 exercise</a></dd>
 </dl>
+	
+<dl>
+	<dt>Week 6</dt>
+	<dd></dd>
+	<dd></dd>
+	
+
 
 </div><!-- weekly ends-->
 <div id="project">
