--- a/weekly/index.html
+++ b/weekly/index.html
@@ -50,9 +50,10 @@
 	
 <dl>
 	<dt>Week 6</dt>
-	<dd></dd>
-	<dd></dd>
-	
+	<dd>Div 3 Structure</dd>
+	<dd>Chapter 10 Exercise 10-2</dd>
+	<dd>Chapter 12 Exercise</dd>
+	<dd>Chapter 13 Exercise</dd>
 
 
 </div><!-- weekly ends-->
