--- a/weekly/index.html
+++ b/weekly/index.html
@@ -51,9 +51,9 @@
 <dl>
 	<dt>Week 6</dt>
 	<dd>Div 3 Structure</dd>
-	<dd>Chapter 10 Exercise 10-2</dd>
-	<dd>Chapter 12 Exercise</dd>
-	<dd>Chapter 13 Exercise</dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w7/ch10ex2.html">Chapter 10 Exercise 2</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w7/ch12ex.html">Chapter 12</a></dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w7/ch13ex.html">Chapter 13</a></dd>
 
 
 </div><!-- weekly ends-->
