--- a/weekly/index.html
+++ b/weekly/index.html
@@ -53,10 +53,44 @@
 	<dd>Div 3 Structure</dd>
 <dd><a href="https://cricha160.github.io/AVT-217/weekly/w7/ch10ex2.html">Chapter 10 Exercise 2</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/weekly/w7/ch12ex.html">Chapter 12</a></dd>
-<dd><a href="https://cricha160.github.io/AVT-217/weekly/w7/ch13ex8.html">Chapter 13</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w7/ch13ex8.html">Chapter 13</a></dd></dl>
+	
+<dl>
+	<dt>Week 7</dt>
+	<dd>Nicely redesigned student course homepage</dd>
+	<dd>Chapter 15 exercise</dd></dl>
+	
+<dl>
+	<dt>Week 8</dt>
+	<dd>Chapter 17 Exercise 17-1</dd></dl>
+
+<dl>
+	<dt>Week 9</dt>
+	<dd>Chapter 18 exercise 18-1</dd>
+	<dd>Chapter 18 exercise 18-2</dd>
+	<dd>Webfont exercises</dd>
+	<dd>Course homepage using web fonts</dd></dl>
+
+<dl>
+	<dt>Week 10</dt>
+	<dd>Lightbox</dd>
+	<dd>Chapter 8 exercise 8-4</dd></dl>
+	
+<dl>
+	<dt>Week 11</dt>
+	<dd>Nivo Slider</dd>
+	<dd>Parallax Scrolling</dd></dl>
+	
+<!--<dl>
+<dt>Week 12</dt>
+<dd>Re-sizable background image</dd>
+</dl>-->
 
 
-</div><!-- weekly ends-->
+<h6><a href="#top">Back
+ to the top!</a></h6>
+</div><!---"weekly" ends--->
+
 <div id="project">
 <h4>Projects</h4>
 <dl>
@@ -80,8 +114,24 @@
 <dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup4.png">Menu Mockup #2</a></dd>
 <dd>Homepage HTML</dd>
 <dd>Menu page HTML</dd>
-	
 </dl>
+	
+<dl>
+	<dt>Project 3: Portfolio Web Site Design</dt>
+	<dd>Five well designed portfolio websites critique</dd>
+	<dd>Design Brief and your site content</dd>
+	<dd>Site Maps (3)</dd>
+	<dd>Mood Boards (2)</dd>
+	<dd>Sketches (3 concepts)</dd>
+	<dd>Mockup #1 (including homepage, portfolio page, and resume page)</dd>
+	<dd>Mockup #2 (including homepage, portfolio page, and resume page)</dd>
+	<dd>Final Site</dd>
+	</dl>
+	
+<dl>
+	<dt>Final Assignment</dt>
+	<dd>Responsive webpage</dd>
+	</dl>
 </div><!-- project ends-->
 </div><!-- wrapper ends-->
 
