--- a/weekly/index.html
+++ b/weekly/index.html
@@ -50,7 +50,7 @@
 	
 <dl>
 	<dt>Week 6</dt>
-	<dd>Div 3 Structure</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w6/div-3.html">Div 3 Structure</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/weekly/w7/ch10ex2.html">Chapter 10 Exercise 2</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/weekly/w7/ch12ex.html">Chapter 12</a></dd>
 	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w7/ch13ex8.html">Chapter 13</a></dd></dl>
