--- a/weekly/index.html
+++ b/weekly/index.html
@@ -58,11 +58,11 @@
 <dl>
 	<dt>Week 7</dt>
 	<dd>Nicely redesigned student course homepage</dd>
-	<dd>Chapter 15 exercise</dd></dl>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w7/bakery_.html">Chapter 15 exercise</a></dd></dl>
 	
 <dl>
 	<dt>Week 8</dt>
-	<dd>Chapter 17 Exercise 17-1</dd></dl>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w8/bakery.html"Chapter 17 Exercise 17-1</dd></dl>
 
 <dl>
 	<dt>Week 9</dt>
