--- a/weekly/index.html
+++ b/weekly/index.html
@@ -62,7 +62,7 @@
 	
 <dl>
 	<dt>Week 8</dt>
-	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w8/bakery.html"Chapter 17 Exercise 17-1</dd></dl>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w8/bakery.html">Chapter 17 Exercise 17-1</a></dd></dl>
 
 <dl>
 	<dt>Week 9</dt>
