--- a/weekly/index.html
+++ b/weekly/index.html
@@ -30,7 +30,7 @@
 <dt>Week 3</dt>
 <dd><a href="https://cricha160.github.io/AVT-217/weekly/w3/ch24-1ex.html">Chapter 24 exercise 24-1 (a html file with 2 images)</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/weekly/w3/ch24-2ex.html">Chapter 24 exercise 24-2 (a html file with 3 images and background color)</a></dd>
-<dd>Webpage structure 1: div box </dd>
+<dd><a href="https://cricha160.github.io/AVT-217/weekly/w3/div1.html">Webpage structure 1: div box</a></dd>
 </dl>
 
 	<dl>
