--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup2.png">Menu Mockup #1</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup3.png">Home Page Mockup #2</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup4.png">Menu Mockup #2</a></dd>
-<dd>Homepage HTML</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p2/homepage/homepagemockup.html">Homepage HTML</a></dd>
 <dd>Menu page HTML</dd>
 </dl>
 	
