--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
 <dl>
 	<dt>Week 9</dt>
-	<dd>Chapter 18 exercise 18-1</dd>
-	<dd>Chapter 18 exercise 18-2</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/ch18-1ex.html">Chapter 18 exercise 18-1</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/ch18-2ex.html">Chapter 18 exercise 18-2</a></dd>
 	<dd>Webfont exercises</dd>
 	<dd>Course homepage using web fonts</dd></dl>
 
@@ -119,7 +119,7 @@
 	
 <dl>
 	<dt>Project 3: Portfolio Web Site Design</dt>
-	<dd>Five well designed portfolio websites critique</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/p3_critique.html">Five well designed portfolio websites critique</a></dd>
 	<dd>Design Brief and your site content</dd>
 	<dd>Site Maps (3)</dd>
 	<dd>Mood Boards (2)</dd>
