--- a/weekly/index.html
+++ b/weekly/index.html
@@ -70,7 +70,7 @@
 	<dd>Chapter 18 exercise 18-1</dd>
 	<dd>Chapter 18 exercise 18-2</dd>
 	<dd>Webfont exercises</dd>
-	<dd>Course homepage using web fonts</dd></dl>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/webfonts.html">Course homepage using web fonts</a></dd></dl>
 
 <dl>
 	<dt>Week 10</dt>
