--- a/weekly/index.html
+++ b/weekly/index.html
@@ -67,9 +67,9 @@
 
 <dl>
 	<dt>Week 9</dt>
-	<dd>Chapter 18 exercise 18-1</dd>
-	<dd>Chapter 18 exercise 18-2</dd>
-	<dd>Webfont exercises</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/ch18-1ex.html">Chapter 18 exercise 18-1</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/ch18-2ex.html">Chapter 18 exercise 18-2</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/webfonts.html">Webfont exercises</a></dd>
 	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/webfonts.html">Course homepage using web fonts</a></dd></dl>
 
 <dl>
