--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <dl>
 	<dt>Week 10</dt>
 	<dd>Lightbox</dd>
-	<dd>Chapter 8 exercise 8-4</dd></dl>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w10/ch8-4ex.html">Chapter 8 exercise 8-4</a></dd></dl>
 	
 <dl>
 	<dt>Week 11</dt>
