--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Charity's Coursepage</title>
 <link rel="stylesheet" href="css/index.css">
+	<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Berkshire+Swash&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -69,7 +70,7 @@
 	<dt>Week 9</dt>
 	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/ch18-1ex.html">Chapter 18 exercise 18-1</a></dd>
 	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/ch18-2ex.html">Chapter 18 exercise 18-2</a></dd>
-	<dd>Webfont exercises</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/webfonts.html">Webfont exercises</a></dd>
 	<dd>Course homepage using web fonts</dd></dl>
 
 <dl>
