--- a/p2/homepage/homepagemockup.html
+++ b/p2/homepage/homepagemockup.html
@@ -7,17 +7,18 @@
 </head>
 
 <body>
-<div id="wrapper">
-	<header>
-<li><a href="/Home/">Home</a></li>
-		<u>Ray's Hell Burgers</u>
-	<!--<ul class="mainnav">-->
-		<li><a href="/About/">About Us</a></li>
-		<li><a href="/Contact/">Contact</a></li>
-		<!--</ul>-->
-	
-	
-	</header>
+	<div id="wrapper">
+<header>
+	<div id="headertext">
+<div class="rays">Ray's Hell Burgers</div>
+<!--<ul class="mainnav">-->
+  <li><a href="/Menu/https://cricha160.github.io/AVT-217/p2/menu.html">Menu</a></li>
+			<li><a href="/About Us/">About Us</a></li>
+			<li><a href="/Contact/">Contact</a></li>
+	<!--</ul>-->
+	</div>
+		</header>
+
 	
 	<main>
 	<div class="burger">
@@ -29,9 +30,9 @@
 	<div class="column">
 			<h2 class="menu"><center>Check out the menu</center></h2>
 		</div><!--<column 2 close>-->
-	</main>
+	
 		<div class="new">
-			<h3>What's New on the Menu?</h3></div>
+			<h3>What's New?</h3></div>
 			<div id="row"> 
 			<div class="img">
 			<img src="img/bread-bun-burger-327135-300x201.jpg" alt="veggie burger" width="337" height="260">
@@ -46,8 +47,9 @@
 			<h4>Grilled Cheese</h4>
 			</div>
 		</div><!--<column 3 close>-->
-<!--<wrapper ends>-->
-	<footer>Ray's Hell Burgers | 1234 Arlington Blvd, Arlington VA | Call 01 223 367 4800 to book reservations copyright disclaimer 2019 &copy;</footer>
+	</main>
+	<footer><div id="raytext">Ray's Hell Burgers | 1234 Arlington Blvd, Arlington VA | Call 01 223 367 4800 to book reservations copyright disclaimer 2019 &copy;</div></footer>
 	</div>
+	
 </body>
 </html>
