--- a/p2/homepage/homepagemockup.html
+++ b/p2/homepage/homepagemockup.html
@@ -12,7 +12,7 @@
 	<div id="headertext">
 <div class="rays">Ray's Hell Burgers</div>
 <!--<ul class="mainnav">-->
-  <li><a href="https://cricha160.github.io/AVT-217/p2/Menu/menu.html">Menu</a></li>
+  <li><a href="https://cricha160.github.io/AVT-217/p2/menu/menu.html">Menu</a></li>
 			<li><a href="/About Us/">About Us</a></li>
 			<li><a href="/Contact/">Contact</a></li>
 	<!--</ul>-->
