--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup3.png">Home Page Mockup #2</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup4.png">Menu Mockup #2</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/p2/homepage/homepagemockup.html">Homepage HTML</a></dd>
-<dd>Menu page HTML</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p2/menu/menu.html">Menu page HTML</a></dd>
 </dl>
 	
 <dl>
