--- a/weekly/index.html
+++ b/weekly/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Charity's Coursepage</title>
 <link rel="stylesheet" href="css/index.css">
+	<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Berkshire+Swash&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -70,12 +71,12 @@
 	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/ch18-1ex.html">Chapter 18 exercise 18-1</a></dd>
 	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/ch18-2ex.html">Chapter 18 exercise 18-2</a></dd>
 	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/webfonts.html">Webfont exercises</a></dd>
-	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w9/webfonts.html">Course homepage using web fonts</a></dd></dl>
+	<dd>Course homepage using web fonts</dd></dl>
 
 <dl>
 	<dt>Week 10</dt>
 	<dd>Lightbox</dd>
-	<dd>Chapter 8 exercise 8-4</dd></dl>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w10/ch8-4ex.html">Chapter 8 exercise 8-4</a></dd></dl>
 	
 <dl>
 	<dt>Week 11</dt>
@@ -113,13 +114,13 @@
 <dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup2.png">Menu Mockup #1</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup3.png">Home Page Mockup #2</a></dd>
 <dd><a href="https://cricha160.github.io/AVT-217/p2/mockups/p2mockup4.png">Menu Mockup #2</a></dd>
-<dd>Homepage HTML</dd>
-<dd>Menu page HTML</dd>
+<dd><a href="https://cricha160.github.io/AVT-217/p2/homepage/homepagemockup.html">Homepage HTML</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p2/menu/menu.html">Menu page HTML</a></dd>
 </dl>
 	
 <dl>
 	<dt>Project 3: Portfolio Web Site Design</dt>
-	<dd>Five well designed portfolio websites critique</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/p3_critique.html">Five well designed portfolio websites critique</a></dd>
 	<dd>Design Brief and your site content</dd>
 	<dd>Site Maps (3)</dd>
 	<dd>Mood Boards (2)</dd>
