--- a/weekly/index.html
+++ b/weekly/index.html
@@ -80,7 +80,7 @@
 	
 <dl>
 	<dt>Week 11</dt>
-	<dd>Nivo Slider</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w11/Nivo_Slider/demo/nivoex.html">Nivo Slider</a></dd>
 	<dd>Parallax Scrolling</dd></dl>
 	
 <!--<dl>
