--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 
 <dl>
 	<dt>Week 10</dt>
-	<dd>Lightbox</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w11/lightboxex.html">Lightbox</a></dd>
 	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w10/ch8-4ex.html">Chapter 8 exercise 8-4</a></dd></dl>
 	
 <dl>
 	<dt>Week 11</dt>
-	<dd>Nivo Slider</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w11/Nivo_Slider/demo/nivoex.html">Nivo Slider</a></dd>
 	<dd>Parallax Scrolling</dd></dl>
 	
 <!--<dl>
