--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 	
 <dl>
 	<dt>Final Assignment</dt>
-	<dd>Responsive webpage</dd>
+	<dd><a href="http://cricha160.github.io/AVT-217/w12/finalassignment.png">Responsive webpage</a></dd>
 	</dl>
 </div><!-- project ends-->
 </div><!-- wrapper ends-->
