--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	<dd>Sketches (3 concepts)</dd>
 	<dd>Mockup #1 (including homepage, portfolio page, and resume page)</dd>
 	<dd>Mockup #2 (including homepage, portfolio page, and resume page)</dd>
-	<dd>Final Site</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/homepage/homepage.html">Final Site</a></dd>
 	</dl>
 	
 <dl>
