--- a/p3/portfolio/portfolio.html
+++ b/p3/portfolio/portfolio.html
@@ -40,29 +40,29 @@
 <div class="drawings">
 <div id="row">
 			<div class="img">
-			<img src="img/Sticky Note Slut piece (Non Traditional Drawing).jpg" alt="" width="200" height="260"><h3>Drawings</h3></div>
+			<a href="img/Sticky Note Slut piece (Non Traditional Drawing).jpg" alt="" title="This piece uses non traditional media, including mio water enhancers and sticky notes to represent some of the many comments women often have to hear on a daily basis, whether it's verbal abuse or sexual harassment." data-lightbox="example-set"><img src="img/sns200.jpg" alt=""></a><h3>Drawings</h3></div>
 	<div class="img">
-		<img src="img/tppp.png" alt="pose" width="200" height="260"></div>
+		<a href="img/Topless Pose (Winter 2018).jpg" alt="pose" title="This piece is a self portrait I drew one day during winter break, radiating body positivity." data-lightbox="example-set"><img src="img/tppp.png" alt=""></a></div>
 	<div class="img">
-			<img src="img/IMG_20190127_205156572.jpg" alt="hands" width="200" height="260">
+			<a href="img/IMG_20190127_205156572.jpg" alt="" title="This is a gestural drawing I freehanded. I got inspiration from a picture and made it into my own piece. I like creepy women, they inspire me." data-lightbox="example-set"><img src="img/img200.jpg" alt=""></a>
 			</div>
 	<div class="img">
-			<img src="img/School daze (Non Traditional Drawing).jpg" alt="school" width="200" height="260"></div>
+			<a href="img/School daze (Non Traditional Drawing).jpg" alt="" title="This piece relates to the public school education system and how academia is prioritized over creativity." data-lightbox="example-set"><img src="img/sd200.jpg" alt=""></a></div>
 	</div></div><!--<column 2 close>-->
 
 	
-	
+
 <div class="paintings">
 <div id="paint">
 			<div class="img">
-			<img src="img/Rothko+Interpretation+1+(Painting+I).jpg" alt="" width="200" height="260"><h3>Paintings</h3></div>
+			<a href="img/Rothko+Interpretation+1+(Painting+I).jpg" alt="" title="This piece is my interpretation of a Rothko. I experimented with different brush strokes and some of my favorite colors." data-lightbox="example-set"><img src="img/ri200.jpg" alt=""></a><h3>Paintings</h3></div>
 	<div class="img">
-		<img src="img/Teddy+Bear+(Painting+I).jpg" alt="bear" width="200" height="260"></div>
+		<a href="img/Teddy+Bear+(Painting+I).png" alt="bear" title="This piece is of a teddy bear I got from an ex. I repurposed it into a painting because I thought it'd be interesting to look at the gift in a different way." data-lightbox="example-set"><img src="img/tb200.jpg" alt=""></a></div>
 	<div class="img">
-			<img src="img/Da+Vinci+Interpretation+(Painting+I).jpg" alt="davinci" width="200" height="260">
+			<a href="img/Da+Vinci+Interpretation+(Painting+I).jpg" alt="davinci" title="This is an interpretation of a part of a DaVinci I enjoy. I love buildings, the city life, and the color blue." data-lightbox="example-set"><img src="img/dv200.jpg" alt=""></a>
 			</div>
 	<div class="img">
-			<img src="img/Abstraction+(Painting+I).jpg" alt="painting" width="200" height="260"></div>
+			<a href="img/Abstraction+(Painting+I).jpg" alt="painting" title="This is one of the first assignments in my Painting 1 class. This is the first thing that came to my head." data-lightbox="example-set"><img src="img/abex200.jpg" alt=""></a></div>
 	</div></div><!--<column 3 close>-->
 	
 	
@@ -71,14 +71,14 @@
 <div class="media">
 <div id="mm">
 			<div class="img">
-			<img src="img/Screenshot_20191021-113726.png" alt="" width="200" height="260"><h3>Mixed Media</h3></div>
+			<a href="img/Screenshot_20191021-113726.png" alt="" title="This piece is my first ever readymade for Mixed Media. I thought about how I wanted to grow up and get my first job, until I actually got it. That is where my inspiration came from." data-lightbox="example-set"><img src="img/shoes200.png" alt=""></a><h3>Mixed Media</h3></div>
 	<div class="img">
-		<img src="img/Screenshot_20191021-113656.png" alt="" width="200" height="260"></div>
+		<a href="img/Screenshot_20191021-113656.png" alt="" title="This piece is a customized sculpture I made out of dollar store items. The theme is related to toxic people sucking the energy out of those around them." data-lightbox="example-set"><img src="img/ss200.png" alt=""></a></div>
 	<div class="img">
-			<img src="img/Hand Positions (Non Traditional Drawing).jpg" class="hover-shadow" alt="" width="200" height="260">
+			<a href="img/Hand Positions (Non Traditional Drawing).jpg" alt="" title="This piece is made with mio and pen. I wanted to relate to mental illness and how it's not easy to tell what others may be dealing with." data-lightbox="example-set"><img src="img/hp200.jpg" alt=""></a>
 			</div>
 	<div class="img">
-			<img src="img/Blue Lips Series 1 (Winter 2018).jpg" alt="" width="200" height="260"></div>
+			<a href="img/Blue Lips Series 1 (Winter 2018).jpg" alt="" title="This piece is a gestural drawing that I drew in reference to an image of mine. I wanted to do this angle because I've never done so before." data-lightbox="example-set"><img src="img/bls200.jpg" alt=""></a></div>
 	</div></div></div><!--<column 4 close>-->
 	
 
