--- a/p3/portfolio/portfolio.html
+++ b/p3/portfolio/portfolio.html
@@ -15,7 +15,7 @@
 <header>
 	
 		<div id="logo">
-			<img src="../new/p3/img/6-2-raccoon-png-clipart.png" alt="" style="width:160px;height:129px;" class="raccoon">
+			<img src="img/6-2-raccoon-png-clipart.png" alt="" style="width:160px;height:129px;" class="raccoon">
 			
 			
 			</div>
