--- a/p3/homepage/homepage.html
+++ b/p3/homepage/homepage.html
@@ -45,7 +45,7 @@
 		<div id="below"><h3>What would you like to know?</h3>
 <h4>As a young artist, I've accomplished a lot. I've been an artist ever since I was little, now I'm managing a marketing agency with my boss while doing graphic design. I'd love to one day own my own tattoo shop (I am working on getting tattoo #8 done this spring!). Being the independent and strong willed person I am, I never see myself working for someone else long-term.</h4> 
 <a href="https://cricha160.github.io/AVT-217/p3/portfolio/portfolio.html"><img src="img/20180123_203935.jpg" alt="" width="1024" class="world"></a>
-<h4><a href="https://cricha.github.io/AVT-217/p3/aboutme/aboutme.html">Here's the meaning behind my art.</a></h4>
+<h4><a href="https://cricha160.github.io/AVT-217/p3/aboutme/aboutme.html">Here's the meaning behind my art.</a></h4>
 </div><!--column 2 close-->
 	</body>
 	</main>
