--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	<dd><a href="https://cricha160.github.io/AVT-217/p3/p3_critique.html">Five well designed portfolio websites critique</a></dd>
 	<dd>Design Brief and your site content</dd>
 	<dd>Site Maps (3)</dd>
-	<dd>Mood Boards (2)</dd>
+	<dd><a href="http://cricha160.github.io/AVT-217/p3/moodboard.pdf">Mood Boards (2)</a></dd>
 	<dd>Sketches (3 concepts)</dd>
 	<dd>Mockup #1 (including homepage, portfolio page, and resume page)</dd>
 	<dd>Mockup #2 (including homepage, portfolio page, and resume page)</dd>
