--- a/weekly/index.html
+++ b/weekly/index.html
@@ -132,7 +132,7 @@
 	
 <dl>
 	<dt>Final Assignment</dt>
-	<dd>Responsive webpage</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w12/finalassignment/finalassignment.html></a>Responsive webpage</dd>
 	</dl>
 </div><!-- project ends-->
 </div><!-- wrapper ends-->
