--- a/index.html
+++ b/index.html
@@ -122,11 +122,10 @@
 	<dt>Project 3: Portfolio Web Site Design</dt>
 	<dd><a href="https://cricha160.github.io/AVT-217/p3/p3_critique.html">Five well designed portfolio websites critique</a></dd>
 	<dd>Design Brief and your site content</dd>
-	<dd>Site Maps (3)</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/sitemaps(3).pdf">Site Maps (3)</a></dd>
 	<dd><a href="http://cricha160.github.io/AVT-217/p3/moodboard.pdf">Mood Boards (2)</a></dd>
 	<dd>Sketches (3 concepts)</dd>
 	<dd>Mockup #1 (including homepage, portfolio page, and resume page)</dd>
-	<dd>Mockup #2 (including homepage, portfolio page, and resume page)</dd>
 	<dd><a href="https://cricha160.github.io/AVT-217/p3/homepage/homepage.html">Final Site</a></dd>
 	</dl>
 	
