--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
 	<dd><a href="https://cricha160.github.io/AVT-217/p3/sitemaps(3).pdf">Site Maps (3)</a></dd>
 	<dd><a href="http://cricha160.github.io/AVT-217/p3/moodboard.pdf">Mood Boards (2)</a></dd>
 	<dd><a href="https://cricha160.github.io/AVT-217/p3/sketches(3).jpg">Sketches (3 concepts)</a></dd>
-	<dd>Mockup #1 (including homepage, portfolio page, and resume page)</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/homepage.jpg">Homepage mockup</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/aboutme.jpg">About me mockup</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/resume.jpg">Resume mockup</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/portfolio.jpg">Portfolio mockup</a></dd>
 	<dd><a href="https://cricha160.github.io/AVT-217/p3/homepage/homepage.html">Final Site</a></dd>
 	</dl>
 	
