--- a/weekly/index.html
+++ b/weekly/index.html
@@ -122,17 +122,19 @@
 	<dt>Project 3: Portfolio Web Site Design</dt>
 	<dd><a href="https://cricha160.github.io/AVT-217/p3/p3_critique.html">Five well designed portfolio websites critique</a></dd>
 	<dd>Design Brief and your site content</dd>
-	<dd>Site Maps (3)</dd>
-	<dd>Mood Boards (2)</dd>
-	<dd>Sketches (3 concepts)</dd>
-	<dd>Mockup #1 (including homepage, portfolio page, and resume page)</dd>
-	<dd>Mockup #2 (including homepage, portfolio page, and resume page)</dd>
-	<dd>Final Site</dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/sitemaps(3).pdf">Site Maps (3)</a></dd>
+	<dd><a href="http://cricha160.github.io/AVT-217/p3/moodboard.pdf">Mood Boards (2)</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/sketches(3).jpg">Sketches (3 concepts)</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/homepage.jpg">Homepage mockup</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/aboutme.jpg">About me mockup</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/resume.jpg">Resume mockup</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/portfolio.jpg">Portfolio mockup</a></dd>
+	<dd><a href="https://cricha160.github.io/AVT-217/p3/homepage/homepage.html">Final Site</a></dd>
 	</dl>
 	
 <dl>
 	<dt>Final Assignment</dt>
-	<dd><a href="https://cricha160.github.io/AVT-217/weekly/w12/finalassignment/finalassignment.html></a>Responsive webpage</dd>
+	<dd><a href="http://cricha160.github.io/AVT-217/weekly/w12/finalassignment.html">Responsive webpage</a></dd>
 	</dl>
 </div><!-- project ends-->
 </div><!-- wrapper ends-->
